[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/Alexis 3D.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Textures/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Textures/MenuThem.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/Menus/MainMenu/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Textures/smallFont.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.258824, 0.87451, 0.505882 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.501961, 0.501961, 0 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -495.0
margin_top = -243.5
margin_right = 495.0
margin_bottom = 243.5
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="HBoxContainer"]
margin_right = 400.0
margin_bottom = 487.0
custom_fonts/font = ExtResource( 5 )
tab_align = 0

[node name="MinTiles" type="ItemList" parent="HBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
rect_min_size = Vector2( 400, 0 )
custom_styles/selected_focus = SubResource( 1 )
custom_styles/bg_focus = SubResource( 2 )
fixed_icon_size = Vector2( 200, 250 )

[node name="Other" type="ItemList" parent="HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 37.0
rect_min_size = Vector2( 400, 0 )
custom_styles/selected_focus = SubResource( 1 )
custom_styles/bg_focus = SubResource( 2 )
fixed_icon_size = Vector2( 200, 250 )

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
visible = false
margin_right = 739.0
margin_bottom = 500.0
custom_constants/separation = 50

[node name="GameModeName" type="Label" parent="HBoxContainer/HBoxContainer"]
margin_right = 739.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
custom_constants/line_spacing = 0
text = "GameModeName"
align = 1
valign = 1

[node name="GameModePreview" type="TextureRect" parent="HBoxContainer/HBoxContainer"]
margin_top = 123.0
margin_right = 720.0
margin_bottom = 483.0
rect_min_size = Vector2( 720, 360 )
size_flags_horizontal = 0
expand = true

[node name="MenuButtons" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 450.0
margin_right = 990.0
margin_bottom = 487.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 75
alignment = 1

[node name="GameModeButtons" type="HBoxContainer" parent="HBoxContainer/MenuButtons"]
visible = false
margin_right = 640.0
margin_bottom = 50.0
custom_constants/separation = 60
alignment = 1

[node name="PreviousGMode" type="Button" parent="HBoxContainer/MenuButtons/GameModeButtons"]
margin_left = 175.0
margin_right = 305.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
custom_constants/hseparation = 0
text = "Previous"
flat = true

[node name="NextGMode" type="Button" parent="HBoxContainer/MenuButtons/GameModeButtons"]
margin_left = 365.0
margin_right = 465.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_constants/hseparation = 0
text = "Next"
flat = true

[node name="Play" type="Button" parent="HBoxContainer/MenuButtons"]
margin_top = 56.0
margin_right = 540.0
margin_bottom = 131.0
rect_min_size = Vector2( 150, 75 )
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Play"
flat = true

[node name="Options" type="Button" parent="HBoxContainer/MenuButtons"]
margin_top = 206.0
margin_right = 540.0
margin_bottom = 281.0
rect_min_size = Vector2( 150, 75 )
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Options"
flat = true

[node name="Quit" type="Button" parent="HBoxContainer/MenuButtons"]
margin_top = 356.0
margin_right = 540.0
margin_bottom = 431.0
rect_min_size = Vector2( 150, 75 )
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Quit"
flat = true
